elements spacing fixed

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -145,7 +145,8 @@
   text-align: left;
   display: grid;
   margin:auto;
-  overflow:hidden
+  overflow:hidden;
+  
   
 
 }
@@ -160,6 +161,7 @@
   transition: 0.3s;
   position: relative;
   width: 100%;
+
 }
 
 .grid-container-1-2 .grid-items .internal-border {
@@ -214,11 +216,21 @@
     transform: translateX(0);
     transition: .7s ease;
     opacity:1;
-    
-   
-
 
 }
+
+.e-golf-desc .intersect {
+  transform: translateX(20px);
+  transition: .7s ease;
+  opacity:0}
+  .e-golf-desc .show {
+  transform: translateX(0);
+  transition: .7s ease;
+  opacity:1;
+
+}
+
+
 
 
 
@@ -236,7 +248,7 @@
   color: black;
   padding: 0.75rem 3.9375rem 0.8125rem 2.0625rem;
   text-decoration: none;
-  margin-top: 20px;
+  margin-top: 3rem;
 }
 
 #meet-the-team-btn .icons-wrapper-3 {
@@ -271,6 +283,7 @@
 .car-spec-wrapper{
    display:flex;
    justify-content: center;
+
   
 }
 
@@ -283,7 +296,9 @@
     color:white;
     
    padding:1rem;
-   border-radius:.5rem
+   border-radius:.5rem;
+   margin-top:3rem;
+   margin-bottom:3rem
   
     
 
@@ -400,8 +415,8 @@ select,
 textarea {
   width: 100%;
   padding: 12px;
-  border: 1px solid rgb(75, 75, 75);
-  border-radius: 4px;
+  border: 1px solid rgb(117, 117, 117);
+  
   box-sizing: border-box;
   margin-top: 6px;
   margin-bottom: 16px;
@@ -462,6 +477,16 @@ input[type="submit"]:hover {
     height: auto;
     margin: auto;
   }
+
+  .grid-container-1-2 .grid-items {
+    margin-top:4rem
+
+  }
+
+
+
+
+
 
   .grid-container-1-2 .grid-items #img-2 {
     width: 45%;
@@ -593,10 +618,19 @@ input[type="submit"]:hover {
    
     width:90%;
   
-    margin-top:-3rem;
-    margin-bottom:4rem
+   margin-top:-1.8rem;
+    margin-bottom:4rem;
+    border-bottom:1px solid rgb(196, 195, 195)
    
   }
+
+  .grid-container-1-2 .grid-items {
+    width:100%;
+
+  }
+
+
+
   .grid-container-1-2 p {
     font-size: 14px;
   }
